# vortex

./: .gitignore  CONTENT_WRITING_GUIDE.md  VISA_APPLICATION_ADMIN_REVIEW.md  WEBSITE_STRUCTURE.md  db.sqlite3  pyproject.toml  requirements.txt  scraping.py
.github/: copilot-instructions.md
.github/workflows/: main.yml
apps/core/: admin.py  context_schema.py  middleware.py  models.py  tests.py  utils.py  views.py
apps/core/migrations/: 0001_initial.py  0004_alter_visaapplication_decision.py  0005_pricing.py  0006_payment_discount_fields.py  (+8 more)
apps/universties_portal/: admin.py  apps.py  models.py
config/: australia_tourist_visa.yaml
core/: admin.py  admin_site.py  email_backend.py  models.py  urls.py  views.py
core/migrations/: 0002_client_visa_type_alter_client_client_status_and_more.py  0003_visaapplication_payment_and_more.py  0007_invoice_and_more.py  0009_invoiceapplication_alter_invoice_visa_applications_and_more.py  0010_invoiceotherpayment.py
static/css/: admin_inline_custom.css  plugins.css  styles.css
static/js/: main.js
staticfiles/css/: plugins.css  styles.css
staticfiles/js/: core.min.js  main.js
templates/: 404.html  base.html  contact_us.html  home.html  services.html  terms_and_conditions.html  tourist_visa_detail.html
templates/admin/: index.html
templates/component/: testmonial.html
templates/email/: invoice_email.html
templates/global/: footer.html  header.html
templates/invoice/: pay.html
templates/study_visa/: index.html
vortex_ease/: settings.py  urls.py
vortex_ease_invoice_html/: invoice.css  invoice.html
(+35 files in other folders)
